Adds micro-service API: registering, token (re-)validation and User Management public key request
